fix(unity-bootstrap-theme): added css for long pagination on mobile
UDS-1754

--- a/packages/unity-bootstrap-theme/src/scss/extends/_pager.scss
+++ b/packages/unity-bootstrap-theme/src/scss/extends/_pager.scss
@@ -140,7 +140,9 @@ span.page-link {
 }
 @include media-breakpoint-down(md) {
   .pagination {
-    gap: .4rem;
+    gap: 0rem;
+    padding-right: 0.2rem;
+    padding-left: 0.2rem;
   }
   a.page-link {
     font-size: 14px;
